--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1814,12 +1814,11 @@ body {
 }
 .cid-ryvGrbrShD {
   background: #7ee465;
-  padding-top: 120px;
-  padding-bottom: 60px;
-  background: linear-gradient(0deg, #ffffff, #7ee465);
+  background: linear-gradient(0deg, #91fc9c, #7ee465);
 }
 .cid-ryvGrbrShD .image-block {
   margin: auto;
+  width: 100% !important;
 }
 .cid-ryvGrbrShD figcaption {
   position: relative;
