--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -132,7 +132,7 @@ body {
   border-radius: 3px;
 }
 .bg-primary {
-  background-color: #24ff21 !important;
+  background-color: #0fb60d !important;
 }
 .bg-success {
   background-color: #f7ed4a !important;
@@ -148,23 +148,23 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #24ff21 !important;
-  border-color: #24ff21 !important;
-  color: #002100 !important;
+  background-color: #0fb60d !important;
+  border-color: #0fb60d !important;
+  color: #ffffff !important;
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary.focus,
 .btn-primary.active {
-  color: #002100 !important;
-  background-color: #03d300 !important;
-  border-color: #03d300 !important;
+  color: #ffffff !important;
+  background-color: #096f08 !important;
+  border-color: #096f08 !important;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
-  color: #002100 !important;
-  background-color: #03d300 !important;
-  border-color: #03d300 !important;
+  color: #ffffff !important;
+  background-color: #096f08 !important;
+  border-color: #096f08 !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -312,22 +312,22 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background: none;
-  border-color: #03ba00;
-  color: #03ba00;
+  border-color: #075706;
+  color: #075706;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
-  color: #002100;
-  background-color: #24ff21;
-  border-color: #24ff21;
+  color: #ffffff;
+  background-color: #0fb60d;
+  border-color: #0fb60d;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
-  color: #002100 !important;
-  background-color: #24ff21 !important;
-  border-color: #24ff21 !important;
+  color: #ffffff !important;
+  background-color: #0fb60d !important;
+  border-color: #0fb60d !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -464,7 +464,7 @@ body {
   border-color: #ffffff;
 }
 .text-primary {
-  color: #24ff21 !important;
+  color: #0fb60d !important;
 }
 .text-secondary {
   color: #ff3366 !important;
@@ -489,7 +489,7 @@ body {
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #03ba00 !important;
+  color: #075706 !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
@@ -547,9 +547,9 @@ a.text-black:focus {
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #24ff21;
-  border-color: #24ff21;
-  color: #013a00;
+  background-color: #0fb60d;
+  border-color: #0fb60d;
+  color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
   box-shadow: none;
@@ -565,11 +565,11 @@ a.text-black:focus {
 }
 a,
 a:hover {
-  color: #24ff21;
+  color: #0fb60d;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #edffed;
+  color: #52f350;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -690,7 +690,7 @@ blockquote {
   padding: 10px 0 10px 20px;
   font-size: 1.09rem;
   position: relative;
-  border-color: #24ff21;
+  border-color: #0fb60d;
   border-width: 3px;
 }
 ul,
@@ -779,7 +779,7 @@ pre {
   text-align: center;
   position: relative;
   border: 2px solid #c0a375;
-  border-color: #24ff21;
+  border-color: #0fb60d;
   color: #232323;
   cursor: pointer;
 }
@@ -790,7 +790,7 @@ pre {
 }
 .btn-social:hover {
   color: #fff;
-  background: #24ff21;
+  background: #0fb60d;
 }
 .btn-social + .btn {
   margin-left: .1rem;
@@ -798,11 +798,11 @@ pre {
 /* Footer */
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #24ff21;
+  background: #0fb60d;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #24ff21;
+  color: #0fb60d;
 }
 .footer3 input[type="email"],
 .footer4 input[type="email"] {
@@ -1384,8 +1384,8 @@ body {
 }
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
-  background-color: #24ff21;
-  color: #000000;
+  background-color: #0fb60d;
+  color: #ffffff;
 }
 .jq-selectbox .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:after,
@@ -1397,14 +1397,14 @@ body {
 .jq-selectbox:hover .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:hover:after,
 .jq-number__spin.plus:hover:after {
-  border-top-color: #24ff21;
-  border-bottom-color: #24ff21;
+  border-top-color: #0fb60d;
+  border-bottom-color: #0fb60d;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
   color: #000000 !important;
-  background-color: #24ff21 !important;
+  background-color: #0fb60d !important;
   box-shadow: none!important;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
@@ -1862,11 +1862,11 @@ body {
 }
 .cid-ryG6izMEgS .mbr-text,
 .cid-ryG6izMEgS .mbr-section-btn {
-  color: #ffffff;
+  color: #232323;
 }
 .cid-ryGW4wpj4a {
   background: #ffffff;
-  padding-top: 75px;
+  padding-top: 60px;
   padding-bottom: 60px;
   background: linear-gradient(0deg, #ffffff, #ffffff);
 }
