--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2936,6 +2936,98 @@ body {
 .cid-rwOQLiKEbZ .mbr-section-subtitle {
   color: #1b160e;
 }
+.cid-ryXymDp7JR {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-ryXymDp7JR .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-ryXymDp7JR .number-wrap {
+  color: #232323;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-ryXymDp7JR .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #232323;
+}
+.cid-ryXymDp7JR .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-ryXymDp7JR .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #232323;
+}
+.cid-ryXymDp7JR .countdown-cont {
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-ryXymDp7JR .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-ryXymDp7JR .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-ryXymDp7JR .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-ryXymDp7JR .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-ryXymDp7JR .number,
+  .cid-ryXymDp7JR .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-ryXymDp7JR .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-ryXymDp7JR H2 {
+  color: #ff3366;
+}
 .cid-rwOSaHjSYh {
   background: #ffffff;
   padding-top: 0px;
