create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1946,17 +1946,6 @@ body {
   font-size: 80px;
   color: #149dcc;
 }
-.cid-rwJlxx4jwc {
-  padding-top: 60px;
-  padding-bottom: 15px;
-  background-color: #ffffff;
-}
-.cid-rwJlxx4jwc .mbr-section-subtitle {
-  color: #232323;
-}
-.cid-rwJlxx4jwc H2 {
-  color: #e80000;
-}
 .cid-ryl5YGqpFJ {
   padding-top: 45px;
   padding-bottom: 30px;
@@ -2047,12 +2036,12 @@ body {
   }
 }
 .cid-ryl5YGqpFJ H2 {
-  color: #24ff21;
+  color: #e11700;
 }
 .cid-rwJlXHhq9q {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #0f7699;
+  background-color: #ff6e00;
 }
 .cid-rwJlXHhq9q H2 {
   color: #ffffff;
@@ -2566,17 +2555,6 @@ body {
 .cid-rwJojhQM0O P {
   text-align: center;
 }
-.cid-ryzQoiQocU {
-  padding-top: 60px;
-  padding-bottom: 15px;
-  background-color: #ffffff;
-}
-.cid-ryzQoiQocU .mbr-section-subtitle {
-  color: #232323;
-}
-.cid-ryzQoiQocU H2 {
-  color: #ea0b0b;
-}
 .cid-ryzQvtlJXY {
   padding-top: 45px;
   padding-bottom: 30px;
@@ -2667,12 +2645,12 @@ body {
   }
 }
 .cid-ryzQvtlJXY H2 {
-  color: #24ff21;
+  color: #e11700;
 }
 .cid-rwJoLhGIup {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #0f7699;
+  background-color: #ff6e00;
 }
 .cid-rwJoLhGIup H2 {
   color: #ffffff;
