--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1776,27 +1776,16 @@ body {
 .cid-ryG6izMEgS .mbr-section-btn {
   color: #232323;
 }
-.cid-ryGW4wpj4a {
-  background: #ffffff;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background: linear-gradient(0deg, #ffffff, #ffffff);
+.cid-rzma8Hl9Py {
+  padding-top: 45px;
+  padding-bottom: 15px;
+  background-color: #036b01;
 }
-.cid-ryGW4wpj4a .image-block {
-  margin: auto;
+.cid-rzma8Hl9Py P {
+  color: #767676;
 }
-.cid-ryGW4wpj4a figcaption {
-  position: relative;
-}
-.cid-ryGW4wpj4a figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-ryGW4wpj4a .image-block {
-    width: 100% !important;
-  }
+.cid-rzma8Hl9Py H1 {
+  color: #ffffff;
 }
 .cid-rrNiABYObd {
   padding-top: 45px;
@@ -2042,6 +2031,28 @@ body {
 .cid-rrNLRVTmnv .card-title {
   text-align: center;
 }
+.cid-ryGW4wpj4a {
+  background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: linear-gradient(0deg, #ffffff, #ffffff);
+}
+.cid-ryGW4wpj4a .image-block {
+  margin: auto;
+}
+.cid-ryGW4wpj4a figcaption {
+  position: relative;
+}
+.cid-ryGW4wpj4a figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-ryGW4wpj4a .image-block {
+    width: 100% !important;
+  }
+}
 .cid-rwHV3xDqd1 {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -2171,7 +2182,7 @@ body {
   border-top: 1px solid #ffffff;
 }
 .cid-rwI8SescwW table.table {
-  background: #0a9a08;
+  background: #efefef;
 }
 .cid-rwI8SescwW .dataTables_filter {
   text-align: right;
@@ -2211,7 +2222,7 @@ body {
   color: #ffffff;
 }
 .cid-rwI8SescwW .head-item SPAN {
-  color: #ffffff;
+  color: #232323;
 }
 .cid-ryHLnYAtY4 {
   padding-top: 0px;
