create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1733,8 +1733,8 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-ryzN14gpQ2 {
-  padding-top: 120px;
-  padding-bottom: 15px;
+  padding-top: 105px;
+  padding-bottom: 45px;
   background-color: #036b01;
 }
 .cid-ryzN14gpQ2 .mbr-section-subtitle {
@@ -1776,19 +1776,32 @@ body {
 .cid-ryG6izMEgS .mbr-section-btn {
   color: #232323;
 }
-.cid-rzma8Hl9Py {
-  padding-top: 45px;
-  padding-bottom: 15px;
+.cid-rzmczF742U {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #197218;
+}
+.cid-rzmczF742U .line {
   background-color: #036b01;
+  color: #036b01;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
 }
-.cid-rzma8Hl9Py P {
-  color: #767676;
-}
-.cid-rzma8Hl9Py H1 {
+.cid-rzmczF742U .section-text {
+  padding: 2rem 0;
   color: #ffffff;
 }
+.cid-rzmczF742U .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rzmczF742U .inner-container {
+    width: 100% !important;
+  }
+}
 .cid-rrNiABYObd {
-  padding-top: 45px;
+  padding-top: 60px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
