create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1782,8 +1782,8 @@ body {
   background-color: #197218;
 }
 .cid-rzmczF742U .line {
-  background-color: #036b01;
-  color: #036b01;
+  background-color: #ffffff;
+  color: #ffffff;
   align: center;
   height: 2px;
   margin: 0 auto;
@@ -1954,15 +1954,40 @@ body {
 }
 .cid-rwJlXHhq9q {
   padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ff6e00;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
 .cid-rwJlXHhq9q H2 {
-  color: #ffffff;
+  color: #0f7699;
+}
+.cid-rwJlXHhq9q .mbr-section-subtitle {
+  color: #232323;
+}
+.cid-rzxaMphR3x {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background: linear-gradient(0deg, #ffffff, #ffffff);
+}
+.cid-rzxaMphR3x .image-block {
+  margin: auto;
+}
+.cid-rzxaMphR3x figcaption {
+  position: relative;
+}
+.cid-rzxaMphR3x figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rzxaMphR3x .image-block {
+    width: 100% !important;
+  }
 }
 .cid-rwJn1CGrHe {
   background: #ffffff;
-  padding-top: 45px;
+  padding-top: 0px;
   padding-bottom: 30px;
   background: linear-gradient(0deg, #ffffff, #ffffff);
 }
@@ -2509,16 +2534,16 @@ body {
 .cid-rwJojhQM0O P {
   text-align: center;
 }
-.cid-ryzQvtlJXY {
+.cid-rzx9cXHYsF {
   padding-top: 45px;
   padding-bottom: 30px;
   background-color: #ffffff;
 }
-.cid-ryzQvtlJXY .mbr-section-subtitle {
+.cid-rzx9cXHYsF .mbr-section-subtitle {
   color: #767676;
   font-weight: 300;
 }
-.cid-ryzQvtlJXY .number-wrap {
+.cid-rzx9cXHYsF .number-wrap {
   color: #232323;
   border-color: rgba(255, 255, 255, 0.15);
   position: relative;
@@ -2530,7 +2555,7 @@ body {
   border-radius: 2px;
   max-width: 100%;
 }
-.cid-ryzQvtlJXY .number {
+.cid-rzx9cXHYsF .number {
   font-style: normal;
   font-weight: 700;
   font-size: 55px;
@@ -2540,12 +2565,12 @@ body {
   line-height: 1.3;
   color: #232323;
 }
-.cid-ryzQvtlJXY .period {
+.cid-rzx9cXHYsF .period {
   display: block;
   padding-top: 2px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
-.cid-ryzQvtlJXY .dot {
+.cid-rzx9cXHYsF .dot {
   position: absolute;
   top: -10px;
   right: -1em;
@@ -2562,56 +2587,59 @@ body {
   word-spacing: 0;
   color: #232323;
 }
-.cid-ryzQvtlJXY .countdown-cont {
+.cid-rzx9cXHYsF .countdown-cont {
   max-width: 700px;
   margin: 0 auto;
 }
 @media (max-width: 768px) {
-  .cid-ryzQvtlJXY .dot {
+  .cid-rzx9cXHYsF .dot {
     display: none;
   }
 }
 @media (max-width: 543px) {
-  .cid-ryzQvtlJXY .number-wrap {
+  .cid-rzx9cXHYsF .number-wrap {
     margin-bottom: 15px;
   }
 }
 @media (max-width: 550px) {
-  .cid-ryzQvtlJXY .col-xs-3 {
+  .cid-rzx9cXHYsF .col-xs-3 {
     padding-left: 0;
     padding-right: 0;
     max-width: 25%;
     flex: 0 0 25%;
   }
-  .cid-ryzQvtlJXY .number-wrap {
+  .cid-rzx9cXHYsF .number-wrap {
     min-width: auto;
   }
 }
 @media (max-width: 440px) {
-  .cid-ryzQvtlJXY .number,
-  .cid-ryzQvtlJXY .dot {
+  .cid-rzx9cXHYsF .number,
+  .cid-rzx9cXHYsF .dot {
     font-size: 40px;
   }
 }
 @media (max-width: 380px) {
-  .cid-ryzQvtlJXY .period {
+  .cid-rzx9cXHYsF .period {
     font-size: 0.8rem;
   }
 }
-.cid-ryzQvtlJXY H2 {
+.cid-rzx9cXHYsF H2 {
   color: #e11700;
 }
 .cid-rwJoLhGIup {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ff6e00;
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
 .cid-rwJoLhGIup H2 {
-  color: #ffffff;
+  color: #0f7699;
+}
+.cid-rwJoLhGIup .mbr-section-subtitle {
+  color: #232323;
 }
 .cid-rwJoNiTiaT {
   background: #ffffff;
-  padding-top: 45px;
+  padding-top: 0px;
   padding-bottom: 30px;
   background: linear-gradient(0deg, #ffffff, #ffffff);
 }
@@ -2628,6 +2656,28 @@ body {
 }
 @media (max-width: 768px) {
   .cid-rwJoNiTiaT .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rzxbcKWjsv {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background: linear-gradient(0deg, #ffffff, #ffffff);
+}
+.cid-rzxbcKWjsv .image-block {
+  margin: auto;
+}
+.cid-rzxbcKWjsv figcaption {
+  position: relative;
+}
+.cid-rzxbcKWjsv figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rzxbcKWjsv .image-block {
     width: 100% !important;
   }
 }
@@ -2822,7 +2872,7 @@ body {
   color: #232323;
 }
 .cid-rwOQk5FSpd H2 {
-  color: #1b160e;
+  color: #149dcc;
 }
 .cid-rwOQyM5mDy {
   padding-top: 15px;
