create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1851,7 +1851,7 @@ body {
   color: #767676;
 }
 .cid-ryu9VQ2EwQ .panel-item {
-  background: #b2ccd2;
+  background: #ffffff;
 }
 .cid-ryu9VQ2EwQ .card {
   word-wrap: break-word;
