--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1835,133 +1835,16 @@ body {
 .cid-rrNiABYObd .mbr-section-btn {
   color: #1b160e;
 }
-.cid-ryu9VQ2EwQ {
-  padding-top: 60px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
-}
-.cid-ryu9VQ2EwQ h3 {
-  text-align: center;
-}
-.cid-ryu9VQ2EwQ .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-ryu9VQ2EwQ .mbr-content-text {
-  color: #767676;
-}
-.cid-ryu9VQ2EwQ .panel-item {
-  background: #ffffff;
-}
-.cid-ryu9VQ2EwQ .card {
-  word-wrap: break-word;
-}
-.cid-ryu9VQ2EwQ .mbr-iconfont {
-  font-size: 80px;
-  color: #149dcc;
-}
 .cid-rAbumtzluk {
   padding-top: 30px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rAbumtzluk H2 {
-  color: #0f7699;
+  color: #ef031d;
 }
 .cid-rAbumtzluk .mbr-section-subtitle {
   color: #232323;
-}
-.cid-rz9iIq9DYa {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
-}
-.cid-rz9iIq9DYa .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-rz9iIq9DYa .number-wrap {
-  color: #232323;
-  border-color: rgba(255, 255, 255, 0.15);
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  padding: 5px 10px 13px 10px;
-  margin: 0;
-  min-width: 118px;
-  border-radius: 2px;
-  max-width: 100%;
-}
-.cid-rz9iIq9DYa .number {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 55px;
-  text-transform: none;
-  letter-spacing: -2px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #232323;
-}
-.cid-rz9iIq9DYa .period {
-  display: block;
-  padding-top: 2px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.cid-rz9iIq9DYa .dot {
-  position: absolute;
-  top: -10px;
-  right: -1em;
-  width: 1em;
-  display: block;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 55px;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #232323;
-}
-.cid-rz9iIq9DYa .countdown-cont {
-  max-width: 700px;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-rz9iIq9DYa .dot {
-    display: none;
-  }
-}
-@media (max-width: 543px) {
-  .cid-rz9iIq9DYa .number-wrap {
-    margin-bottom: 15px;
-  }
-}
-@media (max-width: 550px) {
-  .cid-rz9iIq9DYa .col-xs-3 {
-    padding-left: 0;
-    padding-right: 0;
-    max-width: 25%;
-    flex: 0 0 25%;
-  }
-  .cid-rz9iIq9DYa .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 440px) {
-  .cid-rz9iIq9DYa .number,
-  .cid-rz9iIq9DYa .dot {
-    font-size: 40px;
-  }
-}
-@media (max-width: 380px) {
-  .cid-rz9iIq9DYa .period {
-    font-size: 0.8rem;
-  }
-}
-.cid-rz9iIq9DYa H2 {
-  color: #e11700;
 }
 .cid-rwJlXHhq9q {
   padding-top: 60px;
@@ -2010,6 +1893,31 @@ body {
 }
 .cid-rwJmsIzBES .mbr-text {
   color: #232323;
+}
+.cid-ryu9VQ2EwQ {
+  padding-top: 60px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-ryu9VQ2EwQ h3 {
+  text-align: center;
+}
+.cid-ryu9VQ2EwQ .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-ryu9VQ2EwQ .mbr-content-text {
+  color: #767676;
+}
+.cid-ryu9VQ2EwQ .panel-item {
+  background: #ffffff;
+}
+.cid-ryu9VQ2EwQ .card {
+  word-wrap: break-word;
+}
+.cid-ryu9VQ2EwQ .mbr-iconfont {
+  font-size: 80px;
+  color: #149dcc;
 }
 .cid-rrO9cE2B8O {
   padding-top: 30px;
