--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1743,6 +1743,17 @@ body {
 .cid-ryzN14gpQ2 H2 {
   color: #ffffff;
 }
+.cid-ryAcyKAXsy {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-ryAcyKAXsy .mbr-section-subtitle {
+  color: #232323;
+}
+.cid-ryAcyKAXsy H2 {
+  color: #465052;
+}
 .cid-ryG6izMEgS {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1835,28 +1846,17 @@ body {
 .cid-rrNiABYObd .mbr-section-btn {
   color: #1b160e;
 }
-.cid-rAbumtzluk {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-rAbumtzluk H2 {
-  color: #ef031d;
-}
-.cid-rAbumtzluk .mbr-section-subtitle {
-  color: #232323;
-}
 .cid-rAmZZNSkls {
   padding-top: 45px;
   padding-bottom: 30px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rAmZZNSkls .mbr-section-subtitle {
   color: #767676;
   font-weight: 300;
 }
 .cid-rAmZZNSkls .number-wrap {
-  color: #232323;
+  color: #ffffff;
   border-color: rgba(255, 255, 255, 0.15);
   position: relative;
   display: inline-block;
@@ -1875,7 +1875,7 @@ body {
   letter-spacing: -2px;
   word-spacing: 0;
   line-height: 1.3;
-  color: #232323;
+  color: #ffffff;
 }
 .cid-rAmZZNSkls .period {
   display: block;
@@ -1897,7 +1897,7 @@ body {
   text-transform: none;
   letter-spacing: 0;
   word-spacing: 0;
-  color: #232323;
+  color: #ffffff;
 }
 .cid-rAmZZNSkls .countdown-cont {
   max-width: 700px;
@@ -1936,7 +1936,7 @@ body {
   }
 }
 .cid-rAmZZNSkls H2 {
-  color: #e11700;
+  color: #ff4646;
 }
 .cid-rwJlXHhq9q {
   padding-top: 60px;
@@ -1947,6 +1947,17 @@ body {
   color: #0f7699;
 }
 .cid-rwJlXHhq9q .mbr-section-subtitle {
+  color: #232323;
+}
+.cid-rAbumtzluk {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rAbumtzluk H2 {
+  color: #ef031d;
+}
+.cid-rAbumtzluk .mbr-section-subtitle {
   color: #232323;
 }
 .cid-rzxaMphR3x {
@@ -2133,208 +2144,42 @@ body {
   padding-bottom: 15px;
   background-image: url("../../../assets/images/design-sem-nome-2-1920x1080.jpg");
 }
-.cid-ryAbKqGvnh {
-  background: #ffffff;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background: linear-gradient(0deg, #ffffff, #ffffff);
+.cid-rAz4jhjmjW {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ff933c;
 }
-.cid-ryAbKqGvnh .image-block {
-  margin: auto;
+.cid-rAz4jhjmjW .card-box {
+  background-color: #ffffff;
+  padding: 2rem;
 }
-.cid-ryAbKqGvnh figcaption {
+.cid-rAz4jhjmjW h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rAz4jhjmjW p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rAz4jhjmjW .card-wrapper {
   position: relative;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
 }
-.cid-ryAbKqGvnh figcaption div {
+.cid-rAz4jhjmjW .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rAz4jhjmjW .card-img {
   position: absolute;
-  bottom: 0;
+  top: 0;
+  left: 0;
   width: 100%;
+  overflow: hidden;
 }
-@media (max-width: 768px) {
-  .cid-ryAbKqGvnh .image-block {
-    width: 100% !important;
-  }
-}
-.cid-ryAcyKAXsy {
-  padding-top: 15px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-ryAcyKAXsy .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-ryAcyKAXsy H2 {
-  color: #ff2929;
-}
-.cid-rwI8SescwW {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-rwI8SescwW .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rwI8SescwW .container-table {
-  margin: 0 auto;
-}
-.cid-rwI8SescwW .scroll {
-  overflow-x: auto;
-  padding: 0;
-}
-.cid-rwI8SescwW .dataTables_wrapper {
-  display: block;
-}
-.cid-rwI8SescwW .dataTables_wrapper .search {
-  margin-bottom: .5rem;
-}
-.cid-rwI8SescwW .dataTables_wrapper .table {
-  overflow-x: auto;
-}
-.cid-rwI8SescwW table {
-  width: 100% !important;
-  margin-top: 6px;
-  border: 1px solid #ffffff;
-  margin-bottom: 0;
-}
-.cid-rwI8SescwW table th {
-  border-top: none;
-  transition: all .2s;
-  border-bottom: none;
-}
-.cid-rwI8SescwW table th:hover {
-  background: #ffffff;
-  color: #000000;
-}
-.cid-rwI8SescwW table td {
-  border-top: 1px solid #ffffff;
-}
-.cid-rwI8SescwW table.table {
-  background: #f98206;
-}
-.cid-rwI8SescwW .dataTables_filter {
-  text-align: right;
-  margin-bottom: .5rem;
-}
-.cid-rwI8SescwW .dataTables_filter label {
-  display: inline;
-  white-space: normal !important;
-}
-.cid-rwI8SescwW .dataTables_filter input {
-  display: inline;
-  width: auto;
-  margin-left: .5rem;
-  border-radius: 100px;
-  padding-left: 1rem;
-}
-.cid-rwI8SescwW .dataTables_info {
-  padding-bottom: 1rem;
-  padding-top: 1rem;
-  white-space: normal !important;
-}
-@media (max-width: 992px) {
-  .cid-rwI8SescwW .dataTables_filter {
-    text-align: center;
-  }
-}
-@media (max-width: 350px) {
-  .cid-rwI8SescwW .dataTables_filter {
-    text-align: center;
-  }
-  .cid-rwI8SescwW .dataTables_filter input {
-    width: 100% !important;
-    margin-left: 0 !important;
-  }
-}
-.cid-rwI8SescwW .body-item {
-  color: #ffffff;
-}
-.cid-rwI8SescwW .head-item SPAN {
-  color: #ffffff;
-}
-.cid-ryHLnYAtY4 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-ryHLnYAtY4 .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-ryHLnYAtY4 .container-table {
-  margin: 0 auto;
-}
-.cid-ryHLnYAtY4 .scroll {
-  overflow-x: auto;
-  padding: 0;
-}
-.cid-ryHLnYAtY4 .dataTables_wrapper {
-  display: block;
-}
-.cid-ryHLnYAtY4 .dataTables_wrapper .search {
-  margin-bottom: .5rem;
-}
-.cid-ryHLnYAtY4 .dataTables_wrapper .table {
-  overflow-x: auto;
-}
-.cid-ryHLnYAtY4 table {
-  width: 100% !important;
-  margin-top: 6px;
-  border: 1px solid #ffffff;
-  margin-bottom: 0;
-}
-.cid-ryHLnYAtY4 table th {
-  border-top: none;
-  transition: all .2s;
-  border-bottom: none;
-}
-.cid-ryHLnYAtY4 table th:hover {
-  background: #ffffff;
-  color: #000000;
-}
-.cid-ryHLnYAtY4 table td {
-  border-top: 1px solid #ffffff;
-}
-.cid-ryHLnYAtY4 table.table {
-  background: #f98206;
-}
-.cid-ryHLnYAtY4 .dataTables_filter {
-  text-align: right;
-  margin-bottom: .5rem;
-}
-.cid-ryHLnYAtY4 .dataTables_filter label {
-  display: inline;
-  white-space: normal !important;
-}
-.cid-ryHLnYAtY4 .dataTables_filter input {
-  display: inline;
-  width: auto;
-  margin-left: .5rem;
-  border-radius: 100px;
-  padding-left: 1rem;
-}
-.cid-ryHLnYAtY4 .dataTables_info {
-  padding-bottom: 1rem;
-  padding-top: 1rem;
-  white-space: normal !important;
-}
-@media (max-width: 992px) {
-  .cid-ryHLnYAtY4 .dataTables_filter {
-    text-align: center;
-  }
-}
-@media (max-width: 350px) {
-  .cid-ryHLnYAtY4 .dataTables_filter {
-    text-align: center;
-  }
-  .cid-ryHLnYAtY4 .dataTables_filter input {
-    width: 100% !important;
-    margin-left: 0 !important;
-  }
-}
-.cid-ryHLnYAtY4 .body-item {
-  color: #ffffff;
-}
-.cid-ryHLnYAtY4 .head-item SPAN {
-  color: #ffffff;
+.cid-rAz4jhjmjW P {
+  color: #232323;
 }
 .cid-rwIRkCyQCI {
   background: #ffffff;
@@ -2596,17 +2441,17 @@ body {
 .cid-rAbuC08xyn .mbr-section-subtitle {
   color: #232323;
 }
-.cid-rAn0od1w6s {
+.cid-rAz7BlrJaG {
   padding-top: 45px;
   padding-bottom: 30px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
-.cid-rAn0od1w6s .mbr-section-subtitle {
+.cid-rAz7BlrJaG .mbr-section-subtitle {
   color: #767676;
   font-weight: 300;
 }
-.cid-rAn0od1w6s .number-wrap {
-  color: #232323;
+.cid-rAz7BlrJaG .number-wrap {
+  color: #ffffff;
   border-color: rgba(255, 255, 255, 0.15);
   position: relative;
   display: inline-block;
@@ -2617,7 +2462,7 @@ body {
   border-radius: 2px;
   max-width: 100%;
 }
-.cid-rAn0od1w6s .number {
+.cid-rAz7BlrJaG .number {
   font-style: normal;
   font-weight: 700;
   font-size: 55px;
@@ -2625,14 +2470,14 @@ body {
   letter-spacing: -2px;
   word-spacing: 0;
   line-height: 1.3;
-  color: #232323;
+  color: #ffffff;
 }
-.cid-rAn0od1w6s .period {
+.cid-rAz7BlrJaG .period {
   display: block;
   padding-top: 2px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
-.cid-rAn0od1w6s .dot {
+.cid-rAz7BlrJaG .dot {
   position: absolute;
   top: -10px;
   right: -1em;
@@ -2647,51 +2492,51 @@ body {
   text-transform: none;
   letter-spacing: 0;
   word-spacing: 0;
-  color: #232323;
+  color: #ffffff;
 }
-.cid-rAn0od1w6s .countdown-cont {
+.cid-rAz7BlrJaG .countdown-cont {
   max-width: 700px;
   margin: 0 auto;
 }
 @media (max-width: 768px) {
-  .cid-rAn0od1w6s .dot {
+  .cid-rAz7BlrJaG .dot {
     display: none;
   }
 }
 @media (max-width: 543px) {
-  .cid-rAn0od1w6s .number-wrap {
+  .cid-rAz7BlrJaG .number-wrap {
     margin-bottom: 15px;
   }
 }
 @media (max-width: 550px) {
-  .cid-rAn0od1w6s .col-xs-3 {
+  .cid-rAz7BlrJaG .col-xs-3 {
     padding-left: 0;
     padding-right: 0;
     max-width: 25%;
     flex: 0 0 25%;
   }
-  .cid-rAn0od1w6s .number-wrap {
+  .cid-rAz7BlrJaG .number-wrap {
     min-width: auto;
   }
 }
 @media (max-width: 440px) {
-  .cid-rAn0od1w6s .number,
-  .cid-rAn0od1w6s .dot {
+  .cid-rAz7BlrJaG .number,
+  .cid-rAz7BlrJaG .dot {
     font-size: 40px;
   }
 }
 @media (max-width: 380px) {
-  .cid-rAn0od1w6s .period {
+  .cid-rAz7BlrJaG .period {
     font-size: 0.8rem;
   }
 }
-.cid-rAn0od1w6s H2 {
-  color: #e11700;
+.cid-rAz7BlrJaG H2 {
+  color: #ff4646;
 }
 .cid-rwJoLhGIup {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #efefef;
+  background-color: #ffffff;
 }
 .cid-rwJoLhGIup H2 {
   color: #0f7699;
