--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1754,38 +1754,27 @@ body {
 .cid-ryAcyKAXsy H2 {
   color: #465052;
 }
-.cid-ryG6izMEgS {
+.cid-rAz8sIB9Al {
+  background: #ee6e0d;
   padding-top: 60px;
   padding-bottom: 60px;
-  background-image: url("../../../assets/images/sabonetes.cosmeticosartesanais-54247676-123386165429558-988503543967926000-n-1079x565.jpg");
+  background: linear-gradient(0deg, #ee6e0d, #ee6e0d);
 }
-.cid-ryG6izMEgS .media-container-row {
-  flex-direction: row-reverse;
-  -webkit-flex-direction: row-reverse;
+.cid-rAz8sIB9Al .image-block {
+  margin: auto;
 }
-@media (min-width: 992px) {
-  .cid-ryG6izMEgS .mbr-figure {
-    padding-right: 4rem;
-    padding-right: 0;
-    padding-left: 4rem;
+.cid-rAz8sIB9Al figcaption {
+  position: relative;
+}
+.cid-rAz8sIB9Al figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rAz8sIB9Al .image-block {
+    width: 100% !important;
   }
-}
-@media (max-width: 991px) {
-  .cid-ryG6izMEgS .mbr-figure {
-    padding-bottom: 3rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-ryG6izMEgS .mbr-text {
-    text-align: center;
-  }
-}
-.cid-ryG6izMEgS B {
-  color: #006806;
-}
-.cid-ryG6izMEgS .mbr-text,
-.cid-ryG6izMEgS .mbr-section-btn {
-  color: #232323;
 }
 .cid-rzmczF742U {
   padding-top: 30px;
@@ -1849,7 +1838,7 @@ body {
 .cid-rAmZZNSkls {
   padding-top: 45px;
   padding-bottom: 30px;
-  background-color: #232323;
+  background-color: #036b01;
 }
 .cid-rAmZZNSkls .mbr-section-subtitle {
   color: #767676;
@@ -1936,7 +1925,7 @@ body {
   }
 }
 .cid-rAmZZNSkls H2 {
-  color: #ff4646;
+  color: #fff000;
 }
 .cid-rwJlXHhq9q {
   padding-top: 60px;
@@ -2441,105 +2430,13 @@ body {
 .cid-rAbuC08xyn .mbr-section-subtitle {
   color: #232323;
 }
-.cid-rAz7BlrJaG {
-  padding-top: 45px;
-  padding-bottom: 30px;
-  background-color: #232323;
-}
-.cid-rAz7BlrJaG .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-rAz7BlrJaG .number-wrap {
-  color: #ffffff;
-  border-color: rgba(255, 255, 255, 0.15);
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  padding: 5px 10px 13px 10px;
-  margin: 0;
-  min-width: 118px;
-  border-radius: 2px;
-  max-width: 100%;
-}
-.cid-rAz7BlrJaG .number {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 55px;
-  text-transform: none;
-  letter-spacing: -2px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #ffffff;
-}
-.cid-rAz7BlrJaG .period {
-  display: block;
-  padding-top: 2px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.cid-rAz7BlrJaG .dot {
-  position: absolute;
-  top: -10px;
-  right: -1em;
-  width: 1em;
-  display: block;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 55px;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #ffffff;
-}
-.cid-rAz7BlrJaG .countdown-cont {
-  max-width: 700px;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-rAz7BlrJaG .dot {
-    display: none;
-  }
-}
-@media (max-width: 543px) {
-  .cid-rAz7BlrJaG .number-wrap {
-    margin-bottom: 15px;
-  }
-}
-@media (max-width: 550px) {
-  .cid-rAz7BlrJaG .col-xs-3 {
-    padding-left: 0;
-    padding-right: 0;
-    max-width: 25%;
-    flex: 0 0 25%;
-  }
-  .cid-rAz7BlrJaG .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 440px) {
-  .cid-rAz7BlrJaG .number,
-  .cid-rAz7BlrJaG .dot {
-    font-size: 40px;
-  }
-}
-@media (max-width: 380px) {
-  .cid-rAz7BlrJaG .period {
-    font-size: 0.8rem;
-  }
-}
-.cid-rAz7BlrJaG H2 {
-  color: #ff4646;
-}
 .cid-rwJoLhGIup {
   padding-top: 45px;
-  padding-bottom: 45px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-rwJoLhGIup H2 {
-  color: #0f7699;
+  color: #ef031d;
 }
 .cid-rwJoLhGIup .mbr-section-subtitle {
   color: #232323;
@@ -2731,8 +2628,8 @@ body {
 }
 .cid-rrNdUwNPe7 {
   padding-top: 60px;
-  padding-bottom: 60px;
-  background-image: url("../../../assets/images/mulher-pensativa-2-800x563.jpg");
+  padding-bottom: 30px;
+  background-color: #073b4c;
 }
 .cid-rrNdUwNPe7 H1 {
   color: #fc8807;
@@ -2747,6 +2644,98 @@ body {
 }
 .cid-rrNdUwNPe7 B {
   color: #0afc07;
+}
+.cid-rAz93WETqQ {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #036b01;
+}
+.cid-rAz93WETqQ .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rAz93WETqQ .number-wrap {
+  color: #ffffff;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-rAz93WETqQ .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #ffffff;
+}
+.cid-rAz93WETqQ .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-rAz93WETqQ .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #ffffff;
+}
+.cid-rAz93WETqQ .countdown-cont {
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rAz93WETqQ .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-rAz93WETqQ .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-rAz93WETqQ .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-rAz93WETqQ .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-rAz93WETqQ .number,
+  .cid-rAz93WETqQ .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-rAz93WETqQ .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-rAz93WETqQ H2 {
+  color: #fff000;
 }
 .cid-rwOQk5FSpd {
   padding-top: 60px;
